--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         .trade-data-divs {
             border: 1px solid black;
             padding: 1em;
-            width: 280px;
+            width: 350px;
             margin: 20px 2px 0 2px;
         }
         .data-output-divs {
@@ -50,7 +50,7 @@
             justify-content: space-between;
         }
         .data-cell {
-            min-width: 30px;
+            min-width: 70px;
         }
         .button-options {
             margin: 0 auto 10px auto;
@@ -67,7 +67,7 @@
             <img class="trader-img" src="./img/trader-1.jpg">
             <h4 class="t-h4">What would you like to trade?</h4>
 
-            <form action="javascript:processTrader1()" class="trade-form">
+            <form action="javascript:processTrader1()" class="trade-form" id="form-t1">
                 <input type="hidden" id="trader-name-t1" value="Alef">
                 <select name="items-for-trade" id="items-for-trade-t1" required>
                     <option value="">--choose an item--</option>
@@ -91,7 +91,7 @@
             <img class="trader-img" src="./img/trader-2.jpg">
             <h4 class="t-h4">What would you like to trade?</h4>
 
-            <form action="javascript:processTrader2()" class="trade-form">
+            <form action="javascript:processTrader2()" class="trade-form" id="form-t2">
                 <input type="hidden" id="trader-name-t2" value="Lamed">
                 <select name="items-for-trade" id="items-for-trade-t2" required>
                     <option value="">--choose an item--</option>
@@ -115,7 +115,7 @@
             <img class="trader-img" src="./img/trader-3.jpg">
             <h4 class="t-h4">What would you like to trade?</h4>
 
-            <form action="javascript:processTrader3()" class="trade-form">
+            <form action="javascript:processTrader3()" class="trade-form" id="form-t3">
                 <input type="hidden" id="trader-name-t3" value="Samech">
                 <select name="items-for-trade" id="items-for-trade-t3" required>
                     <option value="">--choose an item--</option>
@@ -135,6 +135,8 @@
         </div>
     </div>
 
+    <div class="rumor" id="rumor"></div>
+
     <div class="data-output-divs">
         <div class="trade-data-divs">
             <h4>Player Trade Items</h4>
@@ -149,6 +151,7 @@
         <div class="trade-data-divs">
             <h4>Trade History</h4>
             <div class="data-heading data-row">
+                <div class="data-cell">Turn</div>
                 <div class="data-cell">Trader</div>
                 <div class="data-cell">Item</div>
                 <div class="data-cell">Price</div>
@@ -162,14 +165,30 @@
     <script>
 
         function gameStart() {
+            purgeTradeHistory();
+            getTurnTrades();
+            getRumors();
+        }
+        gameStart();
 
+        // trade history needs to be reset for each game
+        async function purgeTradeHistory() {
+            // delete trade history table
+            const del = await fetch('/purgeTable/trade_history')
+                .then(del => del.text())
+                .then(text => console.log(text)
+            );
         }
 
         // this tracks the current turn and is used to calculate trade bonuses
         let currentTurn = 1;
+        const maxTurns = 24;
         // get the turn trade information and store it a const
         const turnTrades = [];
+        // get the rumors information and store it a const
+        const rumors = [];
 
+        // get turn trades and add them to a global var
         async function getTurnTrades() {
             const res = await fetch('/getTableData/turn_trades');
             const data = await res.json();
@@ -182,8 +201,40 @@
                 obj['samechBonus'] = element.samech_bonus;
                 turnTrades.push(obj);
             });
+            getCurrentTurnTrade();
         }
-        getTurnTrades();
+
+        // get rumors and add them to a global var
+        async function getRumors() {
+            const res = await fetch('/getTableData/rumors');
+            const data = await res.json();
+            data.elements.forEach(element => {
+                let obj = {};
+                obj['turn'] = element.turn;
+                obj['rumor'] = element.rumor;
+                rumors.push(obj);
+            });
+            displayRumor();
+        }
+
+        const turnRumor = document.getElementById('rumor');
+        function displayRumor() {
+            const noRumor = ['I have heard nothing.', 'I have been asking around.', 'Do we need to trade today?', 'Finding a lead will take time.'];
+            let heardRumor = Math.random() < 0.5;
+            // if heardRumor is true, display from global rumors
+            if (heardRumor) {
+                turnRumor.innerText = rumors[currentTurn - 1].rumor;
+            // if heardRumor was false, present an excuse from noRumorSelection
+            } else {
+                // select randome number between 0 and 3
+                let noRumorSelection = Math.floor(Math.random() * (3 - 0 + 1)) + 0;
+                turnRumor.innerText = noRumor[noRumorSelection];
+            }
+        }
+        
+        function getCurrentTurnTrade() {
+            console.log(turnTrades[currentTurn - 1].turn);
+        }
 
         // process trade
         const tradeHistory = document.getElementById('trade-history-output');
@@ -195,6 +246,7 @@
             const itemsForTrade = document.getElementById('items-for-trade-t1').value;
             const tradeQty = document.getElementById('trade-qty-t1').value;
             updateTradeHistory(traderName, itemsForTrade, tradeQty);
+            document.getElementById('form-t1').reset();
         }
         // trader 2
         function processTrader2() {
@@ -203,6 +255,7 @@
             const itemsForTrade = document.getElementById('items-for-trade-t2').value;
             const tradeQty = document.getElementById('trade-qty-t2').value;
             updateTradeHistory(traderName, itemsForTrade, tradeQty);
+            document.getElementById('form-t2').reset();
         }
         // trader 3
         function processTrader3() {
@@ -211,18 +264,33 @@
             const itemsForTrade = document.getElementById('items-for-trade-t3').value;
             const tradeQty = document.getElementById('trade-qty-t3').value;
             updateTradeHistory(traderName, itemsForTrade, tradeQty);
+            document.getElementById('form-t3').reset();
         }
 
         async function updateTradeHistory(traderName, itemsForTrade, tradeQty) {
             // ensure data is passed to function
             console.log(`Trade Details: ${traderName}: ${itemsForTrade}: ${tradeQty}`);
             // insert new data to trade history
-            const res = await fetch(`/addToTradeHistory/${traderName}&${itemsForTrade}&${5}&${tradeQty}`)
+            console.log(`current turn: ${currentTurn}`);
+            const res = await fetch(`/addToTradeHistory/${currentTurn}&${traderName}&${itemsForTrade}&${5}&${tradeQty}`)
                 .then(res => res.text())
                 .then(text => console.log(text)
             );
-
+            updateCurrentTurnCount();
             displayTradeHistoryData();
+            displayRumor();
+        }
+
+        function updateCurrentTurnCount() {
+            if(currentTurn <= maxTurns) {
+                currentTurn++;
+            } else {
+                triggerEndGame();
+            }
+        }
+
+        function triggerEndGame() {
+            alert("You've reached you max amount of turns. Game over!");
         }
 
         // update trade history on the html page
@@ -238,6 +306,11 @@
                 let container = document.createElement('div');
                 container.setAttribute('class', 'data-row');
                 tradeHistory.appendChild(container);
+                // create turn div and append to container
+                let turnDiv = document.createElement('div');
+                turnDiv.setAttribute('class', 'data-cell');
+                turnDiv.appendChild(document.createTextNode(element.turn));
+                container.appendChild(turnDiv);
                 // create trader name div and append to container
                 let nameDiv = document.createElement('div');
                 nameDiv.setAttribute('class', 'data-cell');
@@ -260,7 +333,6 @@
                 container.appendChild(numItemsTradedDiv);
             });
         }
-        displayTradeHistoryData();
 
         // display player items
         const playerItems = document.getElementById('player-items-output');
