--- a/index.html
+++ b/index.html
@@ -5,84 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TradingGame</title>
-    <style>
-        .section-1 {
-            width: 100%;
-            text-align: center;
-        }
-        .section-2 {
-            width: 100%;
-            display: flex;
-            justify-content: center;
-        }
-        h2 {
-            width: 100%;
-        }
-        #player-items { 
-            display: inline-block;
-        }
-        .trade-data-divs {
-            border: 1px solid black;
-            padding: 1em;
-            width: 350px;
-            margin: 20px 2px 0 2px;
-        }
-        .data-output-divs {
-            display: flex;
-            flex-direction: row;
-        }
-        .trader-section {
-            padding: 1em;
-            background-color: #ddd;
-            display: flex;
-            justify-content: space-around;
-            width: 900px;
-        }
-        .trader {
-            min-width: 80px;
-            min-height: 120px;
-            padding: 0.5em;
-            background-color: #aaa;
-            display: flex;
-            justify-content: center;
-            flex-direction: column;
-        }
-        .trader-title, .t-h4 {
-            text-align: center;
-        }
-        .trader-img {
-            width: 150px;
-            margin: 0 auto;
-        }
-        .data-heading {
-            font-weight: 800;
-            padding-bottom: 4px;
-        }
-        .data-row {
-            display: flex;
-            justify-content: space-between;
-        }
-        .data-cell {
-            min-width: 70px;
-        }
-        .button-options {
-            margin: 0 auto 10px auto;
-        }
-        .rumor {
-            font-size: large;
-            font-weight: 800;
-            text-align: center;
-            padding: 0.5em;
-            background-color: bisque;
-            max-width: 915px;
-            margin: auto;
-        }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Stoke&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&family=Stoke:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <section class="section-1">
-        <h2>Trading Game</h2>
-        <h3 class="instructions">The information on how to play the game will be here at some point.</h3>
+        <h2>The Trade Game</h2>
+        <h3 class="instructions">The game begins with the player having 20 of each of the 8 trade goods. The object of the 
+            game is to trade these goods to the trader who will pay the most for them. On some trades, the trader will pay 
+            the standard rate for each item traded, on other turns they will offer either a 4 or an 8 gold bonus for each item. 
+            They offer the same price for a particular good during the same turn number, so it is possible to memorize what 
+            they offer and complete the game with a perfect score in just 8 turns.</h3>
     </section>
     <section class="section-2">
         <div class="trader-section" id="trader-section">
@@ -94,7 +31,7 @@
                 <form action="javascript:processTrader1()" class="trade-form" id="form-t1">
                     <input type="hidden" id="trader-name-t1" value="Alef">
                     <select name="items-for-trade" id="items-for-trade-t1" required>
-                        <option value="">--choose an item--</option>
+                        <option value="">--choose item--</option>
                         <option value="salt">Salt</option>
                         <option value="gems">Gems</option>
                         <option value="wool">Wool</option>
@@ -118,7 +55,7 @@
                 <form action="javascript:processTrader2()" class="trade-form" id="form-t2">
                     <input type="hidden" id="trader-name-t2" value="Lamed">
                     <select name="items-for-trade" id="items-for-trade-t2" required>
-                        <option value="">--choose an item--</option>
+                        <option value="">--choose item--</option>
                         <option value="salt">Salt</option>
                         <option value="gems">Gems</option>
                         <option value="wool">Wool</option>
@@ -142,7 +79,7 @@
                 <form action="javascript:processTrader3()" class="trade-form" id="form-t3">
                     <input type="hidden" id="trader-name-t3" value="Samech">
                     <select name="items-for-trade" id="items-for-trade-t3" required>
-                        <option value="">--choose an item--</option>
+                        <option value="">--choose item--</option>
                         <option value="salt">Salt</option>
                         <option value="gems">Gems</option>
                         <option value="wool">Wool</option>
@@ -160,233 +97,42 @@
         </div>
     </section>
 
-
-
-    <div class="rumor" id="rumor"></div>
-
-    <div class="data-output-divs">
-        <div class="trade-data-divs">
-            <h4>Player Trade Items</h4>
-            <div class="data-heading data-row">
-                <div class="data-cell">Item</div>
-                <div class="data-cell">Quantity</div>
-            </div>
-            <hr>
-            <div id="player-items-output"></div>
+    <section class="helpful-info">
+        <div class="banner" id="score">
+            <div><span id="h-score">Current Score: 920 </span>(high score: 1020 - Lewis)</div>
         </div>
-    
-        <div class="trade-data-divs">
-            <h4>Trade History</h4>
-            <div class="data-heading data-row">
-                <div class="data-cell">Turn</div>
-                <div class="data-cell">Trader</div>
-                <div class="data-cell">Item</div>
-                <div class="data-cell">Price</div>
-                <div class="data-cell">Quantity</div>
+        <div class="banner" id="rumor"></div>
+        <div class="banner" id="item-info">You traded Oil - Used as lamp fuel, cooking, soap making, and for healing powers.</div>
+    </section>
+
+    <section class="data-output-section">
+        <div class="data-output-divs">
+            <div class="trade-data-divs">
+                <h4>Player Trade Items</h4>
+                <div class="data-heading data-row">
+                    <div class="data-cell">Item</div>
+                    <div class="data-cell">Quantity</div>
+                </div>
+                <hr>
+                <div id="player-items-output"></div>
             </div>
-            <hr>
-            <div id="trade-history-output"></div>
-        </div>
-    </div>
-
-    <script>
-
-        function gameStart() {
-            purgeTradeHistory();
-            getTurnTrades();
-            getRumors();
-        }
-        gameStart();
-
-        // trade history needs to be reset for each game
-        async function purgeTradeHistory() {
-            // delete trade history table
-            const del = await fetch('/purgeTable/trade_history')
-                .then(del => del.text())
-                .then(text => console.log(text)
-            );
-        }
-
-        // this tracks the current turn and is used to calculate trade bonuses
-        let currentTurn = 1;
-        const maxTurns = 24;
-        // get the turn trade information and store it a const
-        const turnTrades = [];
-        // get the rumors information and store it a const
-        const rumors = [];
-
-        // get turn trades and add them to a global var
-        async function getTurnTrades() {
-            const res = await fetch('/getTableData/turn_trades');
-            const data = await res.json();
-            data.elements.forEach(element => {
-                let obj = {};
-                obj['turn'] = element.turn;
-                obj['item'] = element.item;
-                obj['alefBonus'] = element.alef_bonus;
-                obj['lamedBonus'] = element.lamed_bonus;
-                obj['samechBonus'] = element.samech_bonus;
-                turnTrades.push(obj);
-            });
-            getCurrentTurnTrade();
-        }
-
-        // get rumors and add them to a global var
-        async function getRumors() {
-            const res = await fetch('/getTableData/rumors');
-            const data = await res.json();
-            data.elements.forEach(element => {
-                let obj = {};
-                obj['turn'] = element.turn;
-                obj['rumor'] = element.rumor;
-                rumors.push(obj);
-            });
-            displayRumor();
-        }
-
-        const turnRumor = document.getElementById('rumor');
-        function displayRumor() {
-            const noRumor = ['I have heard nothing.', 'I have been asking around for info.', 'Do we need to trade today? I want to nap.', 'Finding a lead will take time.'];
-            let heardRumor = Math.random() < 0.5;
-            // if heardRumor is true, display from global rumors
-            if (heardRumor) {
-                turnRumor.innerText = `Servant Abed: "${rumors[currentTurn - 1].rumor}"`;
-            // if heardRumor was false, present an excuse from noRumorSelection
-            } else {
-                // select randome number between 0 and 3
-                let noRumorSelection = Math.floor(Math.random() * (3 - 0 + 1)) + 0;
-                turnRumor.innerText = `Servant Abed: "${noRumor[noRumorSelection]}"`;
-            }
-        }
         
-        function getCurrentTurnTrade() {
-            console.log(turnTrades[currentTurn - 1].turn);
-        }
+            <div class="trade-data-divs">
+                <h4>Trade History</h4>
+                <div class="data-heading data-row">
+                    <div class="data-cell">Turn</div>
+                    <div class="data-cell">Trader</div>
+                    <div class="data-cell">Item</div>
+                    <div class="data-cell">Price</div>
+                    <div class="data-cell">Quantity</div>
+                    <div class="data-cell">Total</div>
+                </div>
+                <hr>
+                <div id="trade-history-output"></div>
+            </div>
+        </div>
+    </section>
 
-        // process trade
-        const tradeHistory = document.getElementById('trade-history-output');
-
-        // trader 1
-        function processTrader1() {
-            // get values from form
-            const traderName = document.getElementById('trader-name-t1').value;
-            const itemsForTrade = document.getElementById('items-for-trade-t1').value;
-            const tradeQty = document.getElementById('trade-qty-t1').value;
-            updateTradeHistory(traderName, itemsForTrade, tradeQty);
-            document.getElementById('form-t1').reset();
-        }
-        // trader 2
-        function processTrader2() {
-            // get values from form
-            const traderName = document.getElementById('trader-name-t2').value;
-            const itemsForTrade = document.getElementById('items-for-trade-t2').value;
-            const tradeQty = document.getElementById('trade-qty-t2').value;
-            updateTradeHistory(traderName, itemsForTrade, tradeQty);
-            document.getElementById('form-t2').reset();
-        }
-        // trader 3
-        function processTrader3() {
-            // get values from form
-            const traderName = document.getElementById('trader-name-t3').value;
-            const itemsForTrade = document.getElementById('items-for-trade-t3').value;
-            const tradeQty = document.getElementById('trade-qty-t3').value;
-            updateTradeHistory(traderName, itemsForTrade, tradeQty);
-            document.getElementById('form-t3').reset();
-        }
-
-        async function updateTradeHistory(traderName, itemsForTrade, tradeQty) {
-            // ensure data is passed to function
-            console.log(`Trade Details: ${traderName}: ${itemsForTrade}: ${tradeQty}`);
-            // insert new data to trade history
-            console.log(`current turn: ${currentTurn}`);
-            const res = await fetch(`/addToTradeHistory/${currentTurn}&${traderName}&${itemsForTrade}&${5}&${tradeQty}`)
-                .then(res => res.text())
-                .then(text => console.log(text)
-            );
-            updateCurrentTurnCount();
-            displayTradeHistoryData();
-            displayRumor();
-        }
-
-        function updateCurrentTurnCount() {
-            if(currentTurn <= maxTurns) {
-                currentTurn++;
-            } else {
-                triggerEndGame();
-            }
-        }
-
-        function triggerEndGame() {
-            alert("You've reached you max amount of turns. Game over!");
-        }
-
-        // update trade history on the html page
-        async function displayTradeHistoryData() {
-            // clear table contents
-            tradeHistory.innerHTML = '';
-            // get new trade history data
-            const res2 = await fetch(`/getTableData/trade_history`);
-            const data = await res2.json();
-            data.elements.forEach(element => {
-                // loop through all returned items and output them to the UI
-                // create containing div
-                let container = document.createElement('div');
-                container.setAttribute('class', 'data-row');
-                tradeHistory.appendChild(container);
-                // create turn div and append to container
-                let turnDiv = document.createElement('div');
-                turnDiv.setAttribute('class', 'data-cell');
-                turnDiv.appendChild(document.createTextNode(element.turn));
-                container.appendChild(turnDiv);
-                // create trader name div and append to container
-                let nameDiv = document.createElement('div');
-                nameDiv.setAttribute('class', 'data-cell');
-                nameDiv.appendChild(document.createTextNode(element.trader_name));
-                container.appendChild(nameDiv);
-                // create quantity div and append to container
-                let tradeItemDiv = document.createElement('div');
-                tradeItemDiv.setAttribute('class', 'data-cell');
-                tradeItemDiv.appendChild(document.createTextNode(element.item));
-                container.appendChild(tradeItemDiv);
-                // create quantity div and append to container
-                let sellPriceDiv = document.createElement('div');
-                sellPriceDiv.setAttribute('class', 'data-cell');
-                sellPriceDiv.appendChild(document.createTextNode(element.sell_price_per_item));
-                container.appendChild(sellPriceDiv);
-                // create quantity div and append to container
-                let numItemsTradedDiv = document.createElement('div');
-                numItemsTradedDiv.setAttribute('class', 'data-cell');
-                numItemsTradedDiv.appendChild(document.createTextNode(element.num_items_traded));
-                container.appendChild(numItemsTradedDiv);
-            });
-        }
-
-        // display player items
-        const playerItems = document.getElementById('player-items-output');
-        async function displayPlayerItems() {
-            const res = await fetch('/getAllPlayerItems');
-            const data = await res.json();
-            data.elements.forEach(element => {
-                // loop through all returned items and output them to the UI
-                // create containing div
-                let container = document.createElement('div');
-                container.setAttribute('class', 'data-row');
-                playerItems.appendChild(container);
-                // create name div and append to container
-                let nameDiv = document.createElement('div');
-                nameDiv.setAttribute('class', 'data-cell');
-                nameDiv.appendChild(document.createTextNode(element.item));
-                container.appendChild(nameDiv);
-                // create quantity div and append to container
-                let quantDiv = document.createElement('div');
-                quantDiv.setAttribute('class', 'data-cell');
-                quantDiv.appendChild(document.createTextNode(element.qty));
-                container.appendChild(quantDiv);
-            });
-        }
-        displayPlayerItems();
-
-
-    </script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
