--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     <section class="helpful-info">
         <div class="banner" id="score">
-            <div><span id="h-score">Current Score: 920 </span>(high score: 1020 - Lewis)</div>
+            <div><span id="h-score">Current Score: 920 </span><span id="high-score"></span></div>
         </div>
         <div class="banner" id="rumor"></div>
         <div class="banner" id="item-info">You traded Oil - Used as lamp fuel, cooking, soap making, and for healing powers.</div>
