adding rebuilt item description code

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div><span id="h-score">Current Score: 920 </span><span id="high-score"></span></div>
         </div>
         <div class="banner" id="rumor"></div>
-        <div class="banner" id="item-info">You traded Oil - Used as lamp fuel, cooking, soap making, and for healing powers.</div>
+        <div class="banner" id="item-info"></div>
     </section>
 
     <section class="data-output-section">
