dropping the auto fill for the score save

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="modal-content">
             <span class="close-button">X</span>
             <h3 id="modal-output"></h3>
-            <form action="javascript:saveHighScore()" class="score-form" id="score-form">
+            <form action="javascript:saveHighScore()" class="score-form" id="score-form" autocomplete="off">
                 <input type="text" class="modal-input" id="modal-input" placeholder="name"
                     required="required">
                 <input type="submit">
